--- a/builds/layout.html
+++ b/builds/layout.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>HOME</title>
+    <title>LAYOUT</title>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -82,7 +82,7 @@
 <h1>Our Faculty</h1>
 </div>
 
-<div class="grid  margins-off  mt0">
+<div class="grid  margins-off">
 
 <div class="grid-cell  main-content--with-nav">
 <p>John Alexis Edgren <strong>founded Bethel as a seminary</strong> in 1871, with the name Baptist Union Theological Seminary. The seminary trained pastors to serve Swedish Baptist immigrants, fleeing religious persecution in Europe. Edgren, a sea captain and scholar who knew 30 languages, founded Bethel on the enduring conviction that Christians ought to love God with their minds and represent Him in all fields.</p>
