--- a/builds/index.html
+++ b/builds/index.html
@@ -58,33 +58,22 @@
 </div><div class="school__navigation">
     <h1 class="school__navigation__head">Adult Undergrad</h1> 
     <ul class="margins-off">
-        <li><a href="https://www.bethel.edu">Home</a></li>
         <li><a href="/undergrad/about/" class="">About</a></li>
-        <li><a href="/undergrad/academics/index-new" class="active">Academics</a></li>
+        <li><a href="/undergrad/academics/index-new" class="">Academics</a></li>
         <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
-        <li><a href="/undergrad/financial-aid/" class="">Tuition &amp; Financial Aid</a></li>
+        <li><a href="/undergrad/financial-aid/"  class="active">Tuition &amp; Financial Aid</a></li>
         <li><a href="/undergrad/student-life/" class="">Student Life</a></li>
         <li><a href="/undergrad/campus-ministries/" class="">Campus Ministries</a></li>
     </ul>
 </div>
 
 
-    <div class="site__title">
-    <p class="site__title__button"><a href="#nav" data-scroll>☰ Menu</a></p>
-        <h1>Adult Undergrad Academics</h1>
-    </div>
 
-
-<div class="inner">
-<div class="breadcrumb  ph1">
-<p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><a href="/undergrad/academics">Academics</a></p>
-</div><div class="page__title">
-<h1>Our Faculty</h1>
+<div class="site__title">
+    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
+        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><br>
+        <span class="h2">Tuition & Financial Aid</span></p>
 </div>
-
-<div class="grid  margins-off  mt0">
-
-<div class="grid-cell  main-content--with-nav">
 <p>John Alexis Edgren <strong>founded Bethel as a seminary</strong> in 1871, with the name Baptist Union Theological Seminary. The seminary trained pastors to serve Swedish Baptist immigrants, fleeing religious persecution in Europe. Edgren, a sea captain and scholar who knew 30 languages, founded Bethel on the enduring conviction that Christians ought to love God with their minds and represent Him in all fields.</p>
 <h2>Moving to a University</h2>
 <p>The Baptist General Conference (now Converge Worldwide) took on support of the seminary in 1914, moved it from Chicago to St. Paul, and merged it with a Christian high school. Following World War II, Bethel answered demand for four-year degrees, becoming Bethel College &amp; Seminary.</p>
@@ -104,8 +93,6 @@
 </div>
 <div class="grid-cell  site__navigation"  role="navigation">
 
-<nav id="nav">
-    <h1 class="site__navigation__title">Adult Undergrad Academics</h1>
 
 <ul class="accordion-list  accordion-list--open  first-level">
 
@@ -208,7 +195,140 @@
 
 
 </ul>
-</nav>
+
+</div>
+</div>
+	</div>
+</div> --}}
+
+<div class="inner">
+
+
+<div class="grid  margins-off  mt0">
+
+<div class="grid-cell  main-content--with-nav">
+<p>John Alexis Edgren <strong>founded Bethel as a seminary</strong> in 1871, with the name Baptist Union Theological Seminary. The seminary trained pastors to serve Swedish Baptist immigrants, fleeing religious persecution in Europe. Edgren, a sea captain and scholar who knew 30 languages, founded Bethel on the enduring conviction that Christians ought to love God with their minds and represent Him in all fields.</p>
+<h2>Moving to a University</h2>
+<p>The Baptist General Conference (now Converge Worldwide) took on support of the seminary in 1914, moved it from Chicago to St. Paul, and merged it with a Christian high school. Following World War II, Bethel answered demand for four-year degrees, becoming Bethel College &amp; Seminary.</p>
+<p>Over the following decades, visionary leaders expanded Bethel Seminary to the West and East coasts, while growing the undergraduate program in St. Paul. In 1989, non-theological graduate programs were launched, followed by bachelor's degrees for working adults along with online learning options.</p>
+<p>In 2004, already classified among "master's level universities," Bethel changed its name to Bethel University to match its broad scope of programs across 4 schools:</p>
+<ul>
+<li><a href="http://cas.bethel.edu">College of Arts &amp; Sciences</a></li>
+<li><a href="http://caps.bethel.edu">College of Adult &amp; Professional Studies</a></li>
+<li><a href="http://gs.bethel.edu">Graduate School</a></li>
+<li><a href="http://seminary.bethel.edu">Bethel Seminary</a></li>
+</ul>
+<p>Bethel remains a private, Christian university, sponsored in part by the churches of Converge Worldwide, but open to all men and women willing to learn within an evangelical perspective and community.</p>
+<h2>Poised for the Future</h2>
+<p>In less than three decades, Bethel's programs have more than doubled to over 100 degree options, and enrollment has tripled to 6,000 students. But Bethel remains true to the vision of its founder, John Edgren: to develop broadly educated, critically thinking Christians-changing the world through service and leadership in Christ's name.</p>
+</div>
+<div class="grid-cell  main-content--flex">qui exercitationem, dolorem quam fuga! Velit culpa odio a perferendis optio eius quidem earum, obcaecati ipsa, corporis deserunt natus veniam accusamus laborum id ipsam molestias unde quibusdam saepe consequuntur libero quaerat, aspernatur magni. Omnis qui perspiciatis doloremque repellendus quisquam? Fugit maxime alias adipisci mollitia, dolorum quod illo culpa quidem neque aperiam, ad, temporibus numquam sint omnis corporis repellendus repellat ipsum dicta explicabo quisquam sequi minima eaque! Eos pariatur voluptatibus alias sint explicabo quaerat iste perspiciatis atque ipsam aspernatur ad nihil, dolor illum fuga aut hic eius repellendus? Iure cupiditate non, numquam veritatis voluptas! Nemo reiciendis, reprehenderit, iure eaque totam quam nulla tenetur dolores dolorem voluptatem autem! Natus eligendi sequi ratione facere modi incidunt fuga blanditiis quibusdam, aliquid labore voluptate recusandae vel ea, rem qui voluptates nostrum consequatur dignissimos eveniet, repellat laboriosam autem voluptatibus assumenda. Impedit at velit officiis mollitia placeat amet similique aspernatur voluptatum quisquam eum quia excepturi quo maiores, ratione repellendus? Suscipit consectetur eum accusantium eos, obcaecati a dolore ad vitae soluta nisi odit ex ut beatae, numquam itaque neque voluptates, praesentium nostrum nesciunt id sint? Iure aliquam eum, eligendi iste similique perspiciatis, dolores minima. Ipsa, modi, cupiditate. Voluptas quis recusandae maiores asperiores soluta adipisci enim beatae molestias nisi. Labore nesciunt itaque impedit vitae dicta fugit quis asperiores accusamus unde molestias tempora, autem debitis blanditiis. Aliquam molestias iusto, ad? Nesciunt minus, possimus fugit. Eum maxime nisi vitae, tempora officia iure porro, impedit nam ad culpa reprehenderit hic incidunt temporibus nulla sunt, quidem. Aut consequatur, necessitatibus nihil? Nulla nobis nisi quasi placeat ad illum porro recusandae ea accusamus, fuga magni. Deserunt reiciendis labore natus maxime, impedit voluptatibus odit quis porro, eveniet animi aliquam! Officia inventore ipsa, recusandae nobis obcaecati omnis! Necessitatibus repellat vitae eum iusto tempora mollitia fugiat veritatis delectus maiores nemo autem illum ut ipsa porro tenetur accusamus odit laudantium repudiandae, quisquam distinctio. Eum, ad iste temporibus illo voluptatum ipsum eveniet magni, maxime, ipsam in quis aliquam necessitatibus pariatur! Aperiam libero, adipisci amet optio omnis eius perspiciatis architecto assumenda velit asperiores dolorum a quia illo esse nostrum porro fugit quae dolores sint reprehenderit, eligendi vero reiciendis inventore quo. Iure ratione veniam minima magnam neque voluptates, quis quasi obcaecati alias eligendi nostrum aperiam repudiandae recusandae maxime fuga cupiditate, facere eaque porro, sed. Inventore blanditiis quia, facere, facilis quas est, iusto veniam aliquam magni placeat vero dolorum? Sunt saepe voluptate sint blanditiis sapiente nemo, dolor commodi, sed fuga a, ducimus esse nostrum! Quos pariatur magnam praesentium voluptatem, exercitationem at suscipit iusto, nemo temporibus eaque iure illum sint eum libero distinctio voluptates reprehenderit ea aliquid quia quae voluptas! Nisi eos delectus itaque magnam molestiae asperiores, vero provident culpa qui voluptate quo sequi laborum harum earum quaerat commodi, voluptas? Facere neque ullam voluptate quis ipsam nesciunt deleniti assumenda, quisquam tempora. Voluptates omnis accusamus itaque necessita
+</div>
+<div class="grid-cell  site__navigation"  role="navigation">
+
+
+<ul class="accordion-list  accordion-list--open  first-level">
+
+    <li class="accordion-list__item">            
+
+        <button class="accordion-list__button" href="#"> </button>
+        <a class="accordion-list__link" href="index.php">Art &amp; Design Home</a>
+    </li>
+
+
+    <li class="accordion-list__item ">
+
+
+        <button class="accordion-list__button" href="#">+</button>
+        <a class="accordion-list__link" href="/undergrad/academics/art/majors-minors">Majors &amp; Minors</a>
+        
+    </li>
+
+    <ul class="accordion-list">
+
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/art.php">Art</a>
+        </li>
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/fine-arts.php">Bachelor of Fine Arts (B.F.A.)</a>
+        </li>
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/graphic-design.php">Graphic Design</a>
+        </li>
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/arts-education.php">Visual Arts Education K-12</a>
+        </li>
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/art-minor.php">Art Minor</a>
+        </li>
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="majors-minors/graphic-design-minor.php">Graphic Design Minor</a>
+        </li>
+    </ul>
+
+    <li class="accordion-list__item ">
+
+
+        <button class="accordion-list__button" href="#">+</button>
+        <a class="accordion-list__link" href="/undergrad/academics/art/scholarship">Performance Scholarship</a>
+        
+    </li>
+
+    <ul class="accordion-list">
+
+
+        <li class="accordion-list__item">            
+
+            <button class="accordion-list__button" href="#"> </button>    
+            <a class="accordion-list__link" href="scholarship/apply.php">Application</a>
+        </li>
+
+    </ul>
+
+    <li class="accordion-list__item accordion--active">            
+
+        <button class="accordion-list__button" href="#"> </button>    
+        <a class="accordion-list__link" href="faculty.php">Faculty</a>
+    </li>
+
+
+
+
+
+
+
+    <li class="accordion-list__item ">
+<button class="accordion-list__button" href="#"> </button>    
+        <a class="accordion-list__link" href="/undergrad/academics/art/news">News</a>
+
+    </li>
+
+    <ul class="accordion-list">
+
+
+    </ul>
+
+
+</ul>
+
 </div>
 </div>
 </div>
@@ -216,6 +336,10 @@
 
 <footer class="global__footer">
                 <div class="inner">
+                <h2 class="collapsible-heading">Show Footer</h2>
+<div class="collapsible-block">
+ 
+
                     <div class="grid  margins-off">
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
@@ -272,24 +396,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="dark-blue bottom-nav">
-                <ul class="pull-left margins-off">
-                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Home</a></li>
-                    <li><a href="http://www.bethel.edu/about/">About</a></li>
-                    <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
-                    <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
-                    <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
-                    <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
-                    <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
-                    <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-                </ul>
-                <p class="pull-right">© 2004-2014 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a>
-                </p>
+            </div>
+
+                <p><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
         </footer>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.min.js"></script>
 <script src="/js/bundle.js"></script>
 
 <script>
