--- a/builds/layout.html
+++ b/builds/layout.html
@@ -17,7 +17,6 @@
         <link href="//cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.css"/>
     <script src="//ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 </head>
 
@@ -68,14 +67,18 @@
 </div>
 
 
-
-<div class="site__title">
-    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
-        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><br>
-        <span class="h2">Tuition & Financial Aid</span></p>
-</div>
-
 <div class="inner">
+	<div class="site__title">
+	    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
+	        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>
+	        <span class="h2">Tuition & Financial Aid</span></p>
+	</div>
+</div> <div class="inner">
+	<div class="page__title">
+		<h1>Our Faculty</h1>
+	</div>
+</div>
+<div class="inner--content">
 
 
 
