--- a/builds/layout.html
+++ b/builds/layout.html
@@ -17,7 +17,7 @@
         <link href="//cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
-    <script src="//ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
@@ -69,16 +69,11 @@
 
 <div class="inner">
 	<div class="site__title">
-	    <p class="site__title__button" id="site__title__button"><a href="#nav">☰ Menu</a></p>
-	        <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>
+	    <p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ Menu</a></p>
+	    <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>
 	        <span class="h2">Tuition & Financial Aid</span></p>
 	</div>
-</div> <div class="inner">
-	<div class="page__title">
-		<h1>Our Faculty</h1>
-	</div>
-</div>
-<div class="inner--content">
+</div> 
 
 
 
@@ -102,7 +97,6 @@
 <p>In less than three decades, Bethel's programs have more than doubled to over 100 degree options, and enrollment has tripled to 6,000 students. But Bethel remains true to the vision of its founder, John Edgren: to develop broadly educated, critically thinking Christians-changing the world through service and leadership in Christ's name.</p>
 </div>
 <div class="grix d-cell  main-content--flex">qui exercitationem, dolorem quam fuga! Velit culpa odio a perferendis optio eius quidem earum, obcaecati ipsa, corporis deserunt natus veniam accusamus laborum id ipsam molestias unde quibusdam saepe consequuntur libero quaerat, aspernatur magni. Omnis qui perspiciatis doloremque repellendus quisquam? Fugit maxime alias adipisci mollitia, dolorum quod illo culpa quidem neque aperiam, ad, temporibus numquam sint omnis corporis repellendus repellat ipsum dicta explicabo quisquam sequi minima eaque! Eos pariatur voluptatibus alias sint explicabo quaerat iste perspiciatis atque ipsam aspernatur ad nihil, dolor illum fuga aut hic eius repellendus? Iure cupiditate non, numquam veritatis voluptas! Nemo reiciendis, reprehenderit, iure eaque totam quam nulla tenetur dolores dolorem voluptatem autem! Natus eligendi sequi ratione facere modi incidunt fuga blanditiis quibusdam, aliquid labore voluptate recusandae vel ea, rem qui voluptates nostrum consequatur dignissimos eveniet, repellat laboriosam autem voluptatibus assumenda. Impedit at velit officiis mollitia placeat amet similique aspernatur voluptatum quisquam eum quia excepturi quo maiores, ratione repellendus? Suscipit consectetur eum accusantium eos, obcaecati a dolore ad vitae soluta nisi odit ex ut beatae, numquam itaque neque voluptates, praesentium nostrum nesciunt id sint? Iure aliquam eum, eligendi iste similique perspiciatis, dolores minima. Ipsa, modi, cupiditate. Voluptas quis recusandae maiores asperiores soluta adipisci enim beatae molestias nisi. Labore nesciunt itaque impedit vitae dicta fugit quis asperiores accusamus unde molestias tempora, autem debitis blanditiis. Aliquam molestias iusto, ad? Nesciunt minus, possimus fugit. Eum maxime nisi vitae, tempora officia iure porro, impedit nam ad culpa reprehenderit hic incidunt temporibus nulla sunt, quidem. Aut consequatur, necessitatibus nihil? Nulla nobis nisi quasi placeat ad illum porro recusandae ea accusamus, fuga magni. Deserunt reiciendis labore natus maxime, impedit voluptatibus odit quis porro, eveniet animi aliquam! Officia inventore ipsa, recusandae nobis obcaecati omnis! Necessitatibus repellat vitae eum iusto tempora mollitia fugiat veritatis delectus maiores nemo autem illum ut ipsa porro tenetur accusamus odit laudantium repudiandae, quisquam distinctio. Eum, ad iste temporibus illo voluptatum ipsum eveniet magni, maxime, ipsam in quis aliquam necessitatibus pariatur! Aperiam libero, adipisci amet optio omnis eius perspiciatis architecto assumenda velit asperiores dolorum a quia illo esse nostrum porro fugit quae dolores sint reprehenderit, eligendi vero reiciendis inventore quo. Iure ratione veniam minima magnam neque voluptates, quis quasi obcaecati alias eligendi nostrum aperiam repudiandae recusandae maxime fuga cupiditate, facere eaque porro, sed. Inventore blanditiis quia, facere, facilis quas est, iusto veniam aliquam magni placeat vero dolorum? Sunt saepe voluptate sint blanditiis sapiente nemo, dolor commodi, sed fuga a, ducimus esse nostrum! Quos pariatur magnam praesentium voluptatem, exercitationem at suscipit iusto, nemo temporibus eaque iure illum sint eum libero distinctio voluptates reprehenderit ea aliquid quia quae voluptas! Nisi eos delectus itaque magnam molestiae asperiores, vero provident culpa qui voluptate quo sequi laborum harum earum quaerat commodi, voluptas? Facere neque ullam voluptate quis ipsam nesciunt deleniti assumenda, quisquam tempora. Voluptates omnis accusamus itaque necessita
-</div>
 </div>
 </div>
 
