--- a/builds/index.html
+++ b/builds/index.html
@@ -28,13 +28,7 @@
             <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
         </div>
 
-		<p class="quick-links">
-		<a href="#">Blink</a>
-		<a href="#">News</a>
-		<a href="#">Events</a>
-		<a href="#">Offices</a>
-		<svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg>
-		</p>
+
 
 
         <a class="burger" href="#toolbox" id="toolbox-open-btn">
@@ -42,7 +36,9 @@
             <span class="burger-text">Menu</span>
         </a>
     </div>
-</div><div class="global__toolbox" id="toolbox">
+</div>
+
+<div class="global__toolbox" id="toolbox">
     <a class="global__toolbox__close-btn" id="global__toolbox__close-btn" href="#top">✖ close</a>
     
     <nav class="global__navigation" role="navigation">
@@ -59,6 +55,24 @@
             </ul>
         </div>
     </nav>
+
+    <div class="quick-links">
+    	<ul>
+			<li><a href="#">Blink</a></li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Offices</a></li>
+		</ul>
+	</div>
+
+			<form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
+	            <fieldset>
+	                <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
+	                <input name="ie" type="hidden" value="UTF-8">
+	                <input class="search-input" name="q" type="text">
+	                <input class="btn search-go" name="sa" type="submit" value="Search">
+	            </fieldset>
+	        </form>
 </div> <div class="school__navigation">
     <h1 class="school__navigation__head">Adult Undergrad</h1> 
     <ul class="margins-off">
