--- a/builds/layout.html
+++ b/builds/layout.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html class="no-js" lang="">
+<html class="" lang="">
 
 <head>
     <meta charset="utf-8"/>
@@ -17,83 +17,109 @@
         <link href="//cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
-<body>
+<body class="no-js">
 
-<div class="global__header" role="banner">
-    <div class="inner">
-        <div class="global__logo">
-            <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
-        </div>
-
-
-
-
-        <a class="burger" href="#toolbox" id="toolbox-open-btn">
-            <span class="burger-icon"></span>
-            <span class="burger-text">Menu</span>
-        </a>
-    </div>
-</div>
-
-<div class="global__toolbox" id="toolbox">
-    <a class="global__toolbox__close-btn" id="global__toolbox__close-btn" href="#top">✖ close</a>
-    
-    <nav class="global__navigation" role="navigation">
-        <div class="inner">
-            <ul>
-                 <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
-                 <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
-                 <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
-                 <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
-                 <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
-                 <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-                 <li><a href="http://www.bethel.edu/giving/">Giving</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="quick-links">
-    	<ul>
-			<li><a href="#">Blink</a></li>
-			<li><a href="#">News</a></li>
-			<li><a href="#">Events</a></li>
-			<li><a href="#">Offices</a></li>
-		</ul>
+	<div class="global__toolbox" id="toolbox">
+	    <div class="inner">
+	
+	        <a class="global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">✖ close</a>
+	
+	        <nav class="global__navigation" role="navigation">
+	            <ul>
+	                 <li><a href="http://www.bethel.edu/academics/">Undergrad</a></li>
+	                 <li><a href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
+	                 <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
+	                 <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
+	            </ul>
+	        </nav>
+	
+	        <div class="quick-links">
+	        <div class="quick-links left">
+	            <ul>
+	                <li><a href="#">About</a></li>
+	                <li><a href="#">Academics</a></li>
+	                <li><a href="#">Admissions</a></li>
+	                <li><a href="#">Offices</a></li>
+	                <li><a href="#">Events</a></li>
+	            </ul>
+	        </div>
+	
+	       <div class="quick-links right">
+	           <ul>
+	               <li><a href="#">Apply</a></li>
+	               <li><a href="#">Blink</a></li>
+	               <li><a href="#">Giving</a></li>
+	               <li><a class="btn  btn-small">Search</a></li>
+	           </ul>
+	
+	       </div>
+	       </div>
+	
+	    </div> 
 	</div>
+	<div class="inner-wrap--global__navigation" id="js-inner-wrap--global__navigation">
 
-			<form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
-	            <fieldset>
-	                <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
-	                <input name="ie" type="hidden" value="UTF-8">
-	                <input class="search-input" name="q" type="text">
-	                <input class="btn search-go" name="sa" type="submit" value="Search">
-	            </fieldset>
-	        </form>
-</div> <div class="school__navigation">
-    <h1 class="school__navigation__head">Adult Undergrad</h1> 
-    <ul class="margins-off">
-        <li><a href="/undergrad/about/" class="">About</a></li>
-        <li><a href="/undergrad/academics/index-new" class="">Academics</a></li>
-        <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
-        <li><a href="/undergrad/financial-aid/"  class="active">Tuition &amp; Financial Aid</a></li>
-        <li><a href="/undergrad/student-life/" class="">Student Life</a></li>
-        <li><a href="/undergrad/campus-ministries/" class="">Campus Ministries</a></li>
-    </ul>
-</div>
+		    <div class="global__header" role="banner">
+		        <div class="inner">    
+		            <div class="global__logo">
+		                <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
+		            </div>
+		
+		            <nav class="big-global__navigation" role="navigation">
+		                <ul>
+		                     <li><a href="http://www.bethel.edu/academics/">Undergrad</a></li>
+		                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
+		                     <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
+		                     <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
+		                </ul>
+		            </nav>
+		
+		
+		            <a class="burger" href="#toolbox" id="js-globalNav-button">
+		                <span class="burger-icon"></span>
+		                <span class="burger-text">Menu</span>
+		            </a>
+		
+		        </div>
+		    </div>
+		
 
+		<div class="school__navigation">
+		    <h1 class="school__navigation__head">Adult Undergrad</h1> 
+		    <ul class="margins-off">
+		        <li><a href="/undergrad/about/" class="">About</a></li>
+		        <li><a href="/undergrad/academics/index-new" class="active">Academics</a></li>
+		        <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
+		        <li><a href="/undergrad/financial-aid/"  class="">Tuition &amp; Financial Aid</a></li>
+		        <li><a href="/undergrad/student-life/" class="">Student Life</a></li>
+		        <li><a href="/undergrad/campus-ministries/" class="">Campus Ministries</a></li>
+		    </ul>
+		</div>
+		
+		
 
-<div class="inner">
-	<div class="site__title">
-	    <p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ Menu</a></p>
-	    <p class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a>
-	        <span class="h2">Tuition & Financial Aid</span></p>
-	</div>
-</div> 
-
+		<div class="site__image-bank">
+			<img 
+				srcset="
+						 //cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu//undergrad/academics/anthropology-sociology-reconciliation/images/site-images/professor-4-1.jpg 1600w,
+			             //cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu//undergrad/academics/anthropology-sociology-reconciliation/images/site-images/professor-4-1.jpg 800w,
+			             //cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//undergrad/academics/anthropology-sociology-reconciliation/images/site-images/professor-4-1.jpg 200w,
+			    "
+			    src="//cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu//undergrad/academics/anthropology-sociology-reconciliation/images/site-images/professor-4-1.jpg"
+			></img>
+			<h1 class="title">
+			<small class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><a href="#">Academics</a></small><br>
+			Anthropology, Sociology and Reconciliation Studies</h1>
+		
+		</div>		
+		<div class="inner">
+			<div class="site__title">
+			    <p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
+			</div>
+		</div> 
+		
 
 
 
@@ -119,81 +145,76 @@
 </div>
 </div>
 
+		<footer class="global__footer">
+		                <div class="inner">
+		                <h2 class="collapsible-heading">Show Footer</h2>
+		<div class="collapsible-block">
+		 
+		
+		                    <div class="grid  margins-off">
+		                        <div class="grid-cell u-medium-1-4">
+		                            <div class="grid-pad-1x">
+		                                <div class="media">
+		                                    <img src="//cdn4.bethel.edu/images/seal2.png"/>
+		                                    <div class="bd">
+		                                        <h1 class="h5">Bethel University</h1>
+		                                        <address>3900 Bethel Drive
+		                                            <br/>St. Paul, MN 55112</address>
+		                                        <p>651.638.6400</p>
+		                                        <ul class="unstyled  margins-off">
+		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
+		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
+		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
+		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
+		                                        </ul>
+		                                    </div>
+		                                </div>
+		                            </div>
+		                        </div>
+		                        <div class="grid-cell u-medium-1-4">
+		                            <div class="grid-pad-1x">
+		                                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+		                                <ul class="unstyled  margins-off">
+		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
+		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
+		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
+		                                </ul>
+		                            </div>
+		                        </div>
+		                        <div class="grid-cell u-medium-1-4">
+		                            <div class="grid-pad-1x">
+		                                <h2 class="h5">Information For</h2>
+		                                <ul class="unstyled  margins-off">
+		                                    <li><a href="http://www.bethel.edu/admissions/">Prospective Students</a></li>
+		                                    <li><a href="https://blink.bethel.edu/">Current Students</a></li>
+		                                    <li><a href="http://www.bethel.edu/parents/">Parents &amp; Families</a></li>
+		                                    <li><a href="https://blink.bethel.edu/">Faculty &amp; Staff</a></li>
+		                                    <li><a href="http://www.bethel.edu/church-ministries/">Churches</a></li>
+		                                </ul>
+		                            </div>
+		                        </div>
+		                        <div class="grid-cell u-medium-1-4">
+		                            <div class="grid-pad-1x">
+		                                <h2 class="h5">Resources</h2>
+		                                <ul class="unstyled  margins-off">
+		                                    <li><a href="https://blink.bethel.edu/">Blink</a></li>
+		                                    <li><a href="https://mail.bethel.edu">Email</a></li>
+		                                    <li><a href="https://moodle.bethel.edu/">Moodle</a></li>
+		                                    <li><a href="http://www.bethel.edu/events/calendar/">Calendar</a></li>
+		                                    <li><a href="http://www.bethel.edu/library/">Library</a></li>
+		                                </ul>
+		                            </div>
+		                        </div>
+		                    </div>
+		                </div>
+		            </div>
+		
+		                <p><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
+		        </footer>
+	</div>
 
-<footer class="global__footer">
-                <div class="inner">
-                <h2 class="collapsible-heading">Show Footer</h2>
-<div class="collapsible-block">
- 
-
-                    <div class="grid  margins-off">
-                        <div class="grid-cell u-medium-1-4">
-                            <div class="grid-pad-1x">
-                                <div class="media">
-                                    <img src="//cdn4.bethel.edu/images/seal2.png"/>
-                                    <div class="bd">
-                                        <h1 class="h5">Bethel University</h1>
-                                        <address>3900 Bethel Drive
-                                            <br/>St. Paul, MN 55112</address>
-                                        <p>651.638.6400</p>
-                                        <ul class="unstyled  margins-off">
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="grid-cell u-medium-1-4">
-                            <div class="grid-pad-1x">
-                                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-                                <ul class="unstyled  margins-off">
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="grid-cell u-medium-1-4">
-                            <div class="grid-pad-1x">
-                                <h2 class="h5">Information For</h2>
-                                <ul class="unstyled  margins-off">
-                                    <li><a href="http://www.bethel.edu/admissions/">Prospective Students</a></li>
-                                    <li><a href="https://blink.bethel.edu/">Current Students</a></li>
-                                    <li><a href="http://www.bethel.edu/parents/">Parents &amp; Families</a></li>
-                                    <li><a href="https://blink.bethel.edu/">Faculty &amp; Staff</a></li>
-                                    <li><a href="http://www.bethel.edu/church-ministries/">Churches</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="grid-cell u-medium-1-4">
-                            <div class="grid-pad-1x">
-                                <h2 class="h5">Resources</h2>
-                                <ul class="unstyled  margins-off">
-                                    <li><a href="https://blink.bethel.edu/">Blink</a></li>
-                                    <li><a href="https://mail.bethel.edu">Email</a></li>
-                                    <li><a href="https://moodle.bethel.edu/">Moodle</a></li>
-                                    <li><a href="http://www.bethel.edu/events/calendar/">Calendar</a></li>
-                                    <li><a href="http://www.bethel.edu/library/">Library</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-                <p><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
-        </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/js/bundle.js"></script>
 
-<script>
-// $(document).ready(function(){
-// 	$('.slick-carousel').slick({
-// 	  lazyLoad: 'ondemand',
-// 	});
-// });
-</script>
 </body>
 </html>
