--- a/builds/index.html
+++ b/builds/index.html
@@ -130,11 +130,11 @@
 		        </div>
 				
 
-<div class="main">
+<div class="main js-animate">
 
 
     <div class="grid">
-        <div class="grid-cell">
+        <div class="grid-cell u-medium-1-2">
             <div class="medium-grid-pad-1x"><div class="news">
 	<div class="news-feed-8585">
 		<h2>Recent News</h2>
@@ -178,31 +178,6 @@
 
 </div>
 </div>
-        </div>
-        <div class="grid-cell">
-            <div class="medium-grid-pad-1x"><div class="events">
-    <div class="event-feed-8922">
-        <h2>Upcoming Events</h2>
-
-        <div class="events__item" itemscope="itemscope" itemtype="http://schema.org/Event">
-            <p class="events__date-tile">JAN<span>24</span>2015</p>
-            <div class="events__content">
-                <p class="events__headline"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></p>
-                <p><span itemprop="description">Explore majors andies to fulfilling careers.</span></p>
-            </div>
-        </div>
-
-        <div class="events__item" itemscope="itemscope" itemtype="http://schema.org/Event">
-            <p class="events__date-tile">JAN<span>24</span>2015</p>
-            <div class="events__content">
-                <p class="events__headline"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></p>
-                <p class="mb0">10 a.m.</p>
-                <p><span itemprop="description">Explore majors and learn more about Bethel’s opportunities in health sciences that lead to fulfilling careers.</span></p>
-            </div>
-        </div>
-
-    </div>
-</div></div>
         </div>
     </div>
     
