--- a/builds/layout.html
+++ b/builds/layout.html
@@ -88,9 +88,6 @@
 
 
 
-
-
-
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
 		<div class="inner--content  margins-off">
@@ -158,71 +155,70 @@
 		</div>
 
 		<footer class="global__footer">
-		                <div class="inner">
-		                <h2 class="collapsible-heading">Show Footer</h2>
-		<div class="collapsible-block">
-		 
+		    <div class="inner">
 		
-		                    <div class="grid  margins-off">
-		                        <div class="grid-cell u-medium-1-4">
-		                            <div class="grid-pad-1x">
-		                                <div class="media">
-		                                    <img src="//cdn4.bethel.edu/images/seal2.png"/>
-		                                    <div class="bd">
-		                                        <h1 class="h5">Bethel University</h1>
-		                                        <address>3900 Bethel Drive
-		                                            <br/>St. Paul, MN 55112</address>
-		                                        <p>651.638.6400</p>
-		                                        <ul class="unstyled  margins-off">
-		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
-		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
-		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
-		                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
-		                                        </ul>
-		                                    </div>
-		                                </div>
-		                            </div>
-		                        </div>
-		                        <div class="grid-cell u-medium-1-4">
-		                            <div class="grid-pad-1x">
-		                                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-		                                <ul class="unstyled  margins-off">
-		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
-		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
-		                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
-		                                </ul>
-		                            </div>
-		                        </div>
-		                        <div class="grid-cell u-medium-1-4">
-		                            <div class="grid-pad-1x">
-		                                <h2 class="h5">Information For</h2>
-		                                <ul class="unstyled  margins-off">
-		                                    <li><a href="http://www.bethel.edu/admissions/">Prospective Students</a></li>
-		                                    <li><a href="https://blink.bethel.edu/">Current Students</a></li>
-		                                    <li><a href="http://www.bethel.edu/parents/">Parents &amp; Families</a></li>
-		                                    <li><a href="https://blink.bethel.edu/">Faculty &amp; Staff</a></li>
-		                                    <li><a href="http://www.bethel.edu/church-ministries/">Churches</a></li>
-		                                </ul>
-		                            </div>
-		                        </div>
-		                        <div class="grid-cell u-medium-1-4">
-		                            <div class="grid-pad-1x">
-		                                <h2 class="h5">Resources</h2>
-		                                <ul class="unstyled  margins-off">
-		                                    <li><a href="https://blink.bethel.edu/">Blink</a></li>
-		                                    <li><a href="https://mail.bethel.edu">Email</a></li>
-		                                    <li><a href="https://moodle.bethel.edu/">Moodle</a></li>
-		                                    <li><a href="http://www.bethel.edu/events/calendar/">Calendar</a></li>
-		                                    <li><a href="http://www.bethel.edu/library/">Library</a></li>
-		                                </ul>
-		                            </div>
-		                        </div>
+		        <div class="grid">
+		        <div class="grid-cell u-medium-2-4">
+		            <div class="grid-pad-1x">
+		                <div class="grid">
+		                    <div class="grid-cell  u-small-1-3  u-medium-1-3  pr1">
+		                        <img src="//cdn4.bethel.edu/images/seal2.png"/>
 		                    </div>
+		                    <div class="grid-cell  u-small-2-3  u-medium-2-3">
+		                        <h1 class="h5">Bethel University</h1>
+		                        <address>3900 Bethel Drive
+		                            <br/>St. Paul, MN 55112</address>
+		                        <p>651.638.6400</p>
+		                    </div>
+		                </div>
+		
+		                        <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
+		                        <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+		                    
 		                </div>
 		            </div>
 		
-		                <p><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
-		        </footer>
+		            <div class="grid-cell u-medium-1-4">
+		                <div class="grid-pad-1x">
+		                    <h2 class="h5">Information For</h2>
+		                    <ul class="">
+		                        <li><a href="/admissions/">Prospective Students</a></li>
+		                        <li><a href="https://blink.bethel.edu/">Current Students</a></li>
+		                        <li><a href="/alumni/">Alumni</a></li>
+		                        <li><a href="/parents/">Parents &amp; Families</a></li>
+		                        <li><a href="https://blink.bethel.edu/">Faculty &amp; Staff</a></li>
+		                        <li><a href="/church-ministries/">Churches</a></li>
+		                    </ul> 
+		               </div>
+		            </div>
+		            <div class="grid-cell u-medium-1-4">
+		                <div class="grid-pad-1x">
+		                    <ul class=" ">
+		                        <li><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
+		                        <li><a href="http://www.bethel.edu/events/calendar/">Calendar</a></li>
+		                        <li><a href="http://www.bethel.edu/library/">Library</a></li>
+		                        <li><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
+		                    </ul>
+		                </div>
+		            </div>
+		        </div>
+		
+		<div class="social-media">
+		    <p class="social-media__title">Join our community</p>
+		    <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
+		    Facebook</a>
+		    <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
+		    Twitter</a>
+		    <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
+		    LinkedIn</a>
+		</div>
+		    </div>
+		
+		
+		
+		
+		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
+		</footer>
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
